--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Limo Service Name Sign Generator</title>
+    <title>Chauffeur Sign Generator</title>
     <style>
         * {
             box-sizing: border-box;
@@ -235,7 +235,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Name Sign Generator</h1>
+        <h1>Chauffeur Sign Generator</h1>
         
         <div class="input-group">
             <label for="passengerName">Passenger Name:</label>
@@ -553,4 +553,5 @@
         });
     </script>
 </body>
+
 </html>
